deployment/openshift/bootstrap-lab/manifests/minio/00-minio-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    openshift.io/sa.scc.mcs: 's0:c30,c0'
    openshift.io/sa.scc.supplemental-groups: 1000870000/10000
    openshift.io/sa.scc.uid-range: 1000870000/10000
  name: minio-tenant
